update of BEM method +responsiveness + hover fixing

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,62 +12,60 @@
     
     <div class="container">
 
-            <header class="header__container">
-                <div class="header__container-logo">newport</div>
-                <div class="header__container-nav">
-                    <ul class="header__container-nav--list">
-                        <li class="header__container-nav--list---linkNav"><a href="#">gallery</a></li>
-                        <li class="header__container-nav--list---linkNav"><a href="#">blog</a></li>
-                        <li class="header__container-nav--list---linkNav"><a href="#">about</a></li>
-                    </ul>
-                </div>
+            <header class="header">
+                <div class="header__logo">newport</div>
+                    <nav class="header__nav">
+                        <li class="header__nav--link"><a href="#">gallery</a></li>
+                        <li class="header__nav--link"><a href="#">blog</a></li>
+                        <li class="header__nav--link"><a href="#">about</a></li>
+                    </nav>
             </header>
 
         
-        <div class="main__container">
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/clouds-over.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">clouds over ranier</h2>
+        <main class="main">
+            <div class="main__card">
+                <img class="main__card--img" src="../images/clouds-over.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">clouds over ranier</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/white-frost.jpeg" alt="image of trees with snow">
-                <h2 class="main__container-card--imageTitle">white frost</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/white-frost.jpeg" alt="image of trees with snow">
+                <h2 class="main__card--imageTitle">white frost</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/macaw-feathers.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">macaw feathers</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/macaw-feathers.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">macaw feathers</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/burning-clouds.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">burning clouds</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/burning-clouds.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">burning clouds</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/pool-ripples.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">pool ripples</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/pool-ripples.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">pool ripples</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/yellow-sunset.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">yellow sunset</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/yellow-sunset.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">yellow sunset</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/silence.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">silence</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/silence.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">silence</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/red-wall.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">red wall</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/red-wall.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">red wall</h2>
             </div>
-            <div class="main__container-card">
-                <img class="main__container-card--img" src="../images/blue-foam.jpg" alt="image of mountains and sky">
-                <h2 class="main__container-card--imageTitle">blue foam</h2>
+            <div class="main__card">
+                <img class="main__card--img" src="../images/blue-foam.jpg" alt="image of mountains and sky">
+                <h2 class="main__card--imageTitle">blue foam</h2>
             </div>
-        </div>
+        </main>
 
         <footer class="footer">
             <div class="footer__socialMedia">
-                <object data="../images/facebookIcon.svg" width="20" height="20"> </object>
-                <object data="../images/twitterIcon.svg" width="20" height="20"> </object>
-                <object data="../images/email-icon.svg" width="20" height="20"> </object>
+                <object class="footer__socialMedia--icon" data="../images/facebookIcon.svg" width="20" height="20"> </object>
+                <object class="footer__socialMedia--icon" data="../images/twitterIcon.svg" width="20" height="20"> </object>
+                <object class="footer__socialMedia--icon" data="../images/email-icon.svg" width="20" height="20"> </object>
             </div>
             <div class="footer__h3">powered by webflow</div>
 
