responsiveness done! + menu burger + :hover fixing

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,52 +12,55 @@
     
     <div class="container">
 
-            <header class="header">
-                <div class="header__logo">newport</div>
-                    <nav class="header__nav">
-                        <li class="header__nav--link"><a href="#">gallery</a></li>
-                        <li class="header__nav--link"><a href="#">blog</a></li>
-                        <li class="header__nav--link"><a href="#">about</a></li>
-                    </nav>
-            </header>
+        <header class="header">
+            <div class="header__logo">newport</div>
+            <nav class="header__nav">
+                <li class="header__nav-link"><a href="#">gallery</a></li>
+                <li class="header__nav-link"><a href="#">blog</a></li>
+                <li class="header__nav-link"><a href="#">about</a></li>
+            </nav>
+            <div class="header__burger">
+                <img src="../images/burgerMenu.svg" alt="burger menu for navLinks">
+            </div>
+        </header>
 
         
         <main class="main">
             <div class="main__card">
-                <img class="main__card--img" src="../images/clouds-over.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">clouds over ranier</h2>
+                <img class="main__card-img" src="../images/clouds-over.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">clouds over ranier</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/white-frost.jpeg" alt="image of trees with snow">
-                <h2 class="main__card--imageTitle">white frost</h2>
+                <img class="main__card-img" src="../images/white-frost.jpeg" alt="image of trees with snow">
+                <h2 class="main__card-imageTitle">white frost</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/macaw-feathers.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">macaw feathers</h2>
+                <img class="main__card-img" src="../images/macaw-feathers.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">macaw feathers</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/burning-clouds.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">burning clouds</h2>
+                <img class="main__card-img" src="../images/burning-clouds.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">burning clouds</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/pool-ripples.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">pool ripples</h2>
+                <img class="main__card-img" src="../images/pool-ripples.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">pool ripples</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/yellow-sunset.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">yellow sunset</h2>
+                <img class="main__card-img" src="../images/yellow-sunset.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">yellow sunset</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/silence.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">silence</h2>
+                <img class="main__card-img" src="../images/silence.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">silence</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/red-wall.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">red wall</h2>
+                <img class="main__card-img" src="../images/red-wall.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">red wall</h2>
             </div>
             <div class="main__card">
-                <img class="main__card--img" src="../images/blue-foam.jpg" alt="image of mountains and sky">
-                <h2 class="main__card--imageTitle">blue foam</h2>
+                <img class="main__card-img" src="../images/blue-foam.jpg" alt="image of mountains and sky">
+                <h2 class="main__card-imageTitle">blue foam</h2>
             </div>
         </main>
 
