dld font + cleaning files

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="header__logo">newport</div>
             <nav class="header__nav">
-                <li class="header__nav-link"><a href="#">gallery</a></li>
+                <li class="header__nav-link"><a class="active" href="#">gallery</a></li>
                 <li class="header__nav-link"><a href="#">blog</a></li>
                 <li class="header__nav-link"><a href="#">about</a></li>
             </nav>
